--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && node scripts/copy-templates.js",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
+    "@types/handlebars": "^4.0.40",
     "@types/pdfkit": "^0.17.4",
     "axios": "^1.13.4",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^4.21.0",
+    "handlebars": "^4.7.8",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "pdfkit": "^0.17.2",
     "pg": "^8.18.0",
+    "puppeteer": "^24.37.5",
+    "qrcode": "^1.5.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -31,6 +35,7 @@
     "@types/node": "^22.9.0",
     "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
+    "@types/qrcode": "^1.5.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
